syntax = "proto3";

package user;

service UserService {
  rpc FindOne (UserById) returns (User) {}
  rpc FindAll (Empty) returns (Users) {}
  rpc Create (User) returns (User) {}
  rpc GetUserOrders (UserById) returns (UserOrders) {}
}

message Empty {}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message Users {
  repeated User users = 1;
}

message UserOrders {
  repeated Order orders = 1;
}

message Order {
  int32 id = 1;
  int32 userId = 2;
  string status = 3;
}
